# amir-p3

./: .dockerignore  .gitignore  AMWY02090868.1_+_870-1290_201-221_7.ct  Classification.ipynb  Code-Test.ipynb  Code.ipynb  Dockerfile  Evaluation.ipynb  Feature.ipynb  Heat_map.ipynb  INSTALL  LICENSE.md  Optimization.ipynb  README.md  RunCT.ipynb  SEQ.txt  Untitled.ipynb  dataset_generation_negative A.thaliana.ipynb  dataset_generation_negative C.sinensis.ipynb  dataset_generation_negative G.max.ipynb  dataset_generation_negative G.raimondii.ipynb  dataset_generation_negative H.vulgare.ipynb  dataset_generation_negative M.truncatula.ipynb  dataset_generation_negative O.sativa.ipynb  dataset_generation_negative S.bicolor.ipynb  dataset_generation_negative T.aestivum.ipynb  dataset_generation_negative Z.mays.ipynb  dataset_generation_negative.ipynb  dataset_generation_positive.ipynb  download_Rfam(tRNA & rRNA).sh  download_genomes.sh  example.ct  extended.txt  mirbase_analize.ipynb  mirbase_features.ipynb  requirements.txt  result.text  setup.py  str2ct_convertor.ipynb  test  (+1 more)
SPOT-RNA/SPOT-RNA-models/: model3.index
Software/cdhit/: cd-hit
Software/mfold-3.6/: Makefile.am  aclocal.m4  config.status
_SPOT-RNA/SPOT-RNA-models/: model0.index  model1.index  model2.index
_cdhit/: cd-hit-2d  cd-hit-454  cd-hit-div  cd-hit-est-2d
_cdhit/cd-hit-auxtools/: read-linker
classifier/: model.h5  mu.pickle  std.pickle
config/: filter_postprocess.json  titles.json
contrafold/src/: LBFGS.ipp  score_prediction
data/classifier/: mu.pickle
data/example/: example.ct
ipynb files/: Classification-10.ipynb  Classification-Copy1.ipynb  Classification-FINAL-Copy1.ipynb  Classification-FINAL.ipynb  Classification.ipynb  Code.ipynb  Optimization.ipynb  Precursor - Classification.ipynb  PsRobot.ipynb  Test.ipynb  mirbase_features.ipynb
ipynb files/plantmirp2_result/: A.thaliana_positive_precursor.fasta_testing_features.txt  C.sinensis_negative_precursor.fasta_testing_features.txt  C.sinensis_positive_precursor.fasta_results.txt  C.sinensis_positive_precursor.fasta_testing_features.txt  G.max_negative_precursor.fasta_results.txt  G.max_negative_precursor.fasta_testing_features.txt  G.max_positive_precursor.fasta_results.txt  G.max_positive_precursor.fasta_testing_features.txt  G.raimondii_negative_precursor.fasta_results.txt  G.raimondii_negative_precursor.fasta_testing_features.txt  G.raimondii_positive_precursor.fasta_testing_features.txt  M.truncatula_negative_precursor.fasta_results.txt  O.sativa_negative_precursor.fasta_results.txt  O.sativa_positive_precursor.fasta_testing_features.txt  Precursor - Classification.ipynb  S.bicolor_negative_precursor.fasta_results.txt  S.bicolor_negative_precursor.fasta_testing_features.txt  S.bicolor_positive_precursor.fasta_results.txt  T.aestivum_negative_precursor.fasta_results.txt  T.aestivum_negative_precursor.fasta_testing_features.txt  Z.mays_positive_precursor.fasta_results.txt
jupyter_ipynbs/: Classification-FINAL.ipynb  Classification.ipynb  Code.ipynb  Correlation.ipynb  Heat_map_feature.ipynb  RunCT.ipynb  Run_pipeline_manually.ipynb  SRV-Galaxy.ipynb  Venn_diagram.ipynb  Viridi analize.ipynb  dataset_generation_negative.ipynb  down_stream.txt  down_stream_negative.txt  mirbase_precursor_analize_viridi.ipynb  str2ct_convertor.ipynb  up_stream_negative.txt  weblogo.ipynb
jupyter_ipynbs/analize/: Report.ipynb
jupyter_ipynbs/correlation_and_similarity/: Correlation.ipynb  Heat_map_feature.ipynb
jupyter_ipynbs/dataset_generation/: Dataset_generation_negative.ipynb  Dataset_generation_positive.ipynb
jupyter_ipynbs/mirFinder_result/: Precursor - Classification.ipynb
jupyter_ipynbs/plantmirp2_result/: A.thaliana_negative_precursor.fasta_results.txt  A.thaliana_negative_precursor.fasta_testing_features.txt  C.sinensis_negative_precursor.fasta_results.txt  G.raimondii_positive_precursor.fasta_results.txt  M.truncatula_positive_precursor.fasta_testing_features.txt  O.sativa_negative_precursor.fasta_testing_features.txt  S.bicolor_positive_precursor.fasta_testing_features.txt  T.aestivum_positive_precursor.fasta_results.txt  T.aestivum_positive_precursor.fasta_testing_features.txt  Z.mays_positive_precursor.fasta_testing_features.txt
jupyter_ipynbs/visualization/: Violin_distribution.ipynb
jupyter_ipynbs/weblogo/: up_stream_positive.txt  weblogo.ipynb
mfold-3.6/: Configure.bash  INSTALL  Makefile  config.h  config.h.in  configure  configure.ac
mfold-3.6/c++/: algorithm.cpp  algorithm.h  structure.cpp
mfold-3.6/c++/.deps/: efn2-efn2.Po
mfold-3.6/dat/: Makefile.am
mfold-3.6/doc/: box2plot_ng.doc
mfold-3.6/samples/: mdv1.37.ct  mdv1.37.ext  mdv1.37.plot  mdv1.dG  mdv1.plot
mfold-3.6/samples/mfold/: mdv1.h-num  mdv1.out  mdv1.pnt  mdv1.seq  mdv1.ss-count  mdv1_1.ps  mdv1_1.ss  mdv1_2.ann  mdv1_3.ct  mdv1_3.ps  mdv1_4.ct  mdv1_5.ct  mdv1_5.ps  mdv1_6.ps
mfold-3.6/scripts/: Makefile.am  mfold.in
mfold-3.6/src/: Makefile  Makefile.am  Makefile.in  add-dHdSTm.f  add_dHdSTm2  boxplot_ng  boxplot_ng.c  boxplot_ps.h  boxplot_setcolor.h  ct2bp  ct_boxplot.h  ct_boxplot_general.h  ct_boxplot_ng  ct_boxplot_ps.h  ct_boxplot_read_ct.h  ct_boxplot_setcolor.h  ct_compare  ct_compare.f  distance  efiles.f  efn.inc  h-num.f  ion.f  main.f  maxn.inc  mfold_datdir  misc.f  nafold  newtemp  overlay_boxplot.h  overlay_boxplot_ng  overlay_boxplot_ps.h  overlay_boxplot_read_ct.h  pre-efiles.f  pre-efn.f  pre-misc-quik.f  pre-newtemp.f  quik.f  rna-quik.f  sav2p-num.f  (+5 more)
mfold-3.6/src/.deps/: boxplot_ng.Po
software/cdhit/: cd-hit-est
software/mfold-3.6/: Makefile.in
src/: Code.py  Error.json  Filter2.py  Pipeline.py  Postprocess.py  Title.json  blastN.py  convertor.py  ct-analizer.py  ct_analizer.py  diamond.py  dimond.py  extension.py  filter.py  filter1.py  filter2.py  mirbase.py  pipeline.py  postprocess.py  preprocessing.py  read_configs.py  rfam.py  run.py  secondary_structure.py  utils.py
supplementary information/: S1_Table.docx  S2_File.docx  S2_Table.xlsx  S3_File.docx  S3_Table.xlsx  S4_File.docx  S5_File.docx  S7_File.docx
(+169 files in other folders)
