
dist_pkgdata_DATA = $(rna23dg) $(rna23dh) $(dna3dg) $(dna3dh) $(rna3dat) \
$(IMG) $(AWK) $(HTML) boxplot.col boxplot-3.0.col ct_boxplot.col \
overlay_boxplot.col sir_graph.col sir_graph.1.col 

rna23dg = asint1x2.dg dangle.dg miscloop.dg sint4.dg stack.dg \
triloop.dg tstacki.dg asint2x3.dg loop.dg sint2.dg sint6.dg tloop.dg \
tstackh.dg 

rna23dh = asint1x2.dh dangle.dh miscloop.dh sint4.dh stack.dh \
triloop.dh tstacki.dh asint2x3.dh loop.dh sint2.dh sint6.dh tloop.dh \
tstackh.dh 

dna3dg = asint1x2.dgd loop.dgd sint4.dgd tloop.dgd tstacki.dgd \
asint2x3.dgd miscloop.dgd sint6.dgd triloop.dgd dangle.dgd sint2.dgd \
stack.dgd tstackh.dgd 

dna3dh = asint1x2.dhd loop.dhd sint4.dhd tloop.dhd tstacki.dhd \
asint2x3.dhd miscloop.dhd sint6.dhd triloop.dhd dangle.dhd sint2.dhd \
stack.dhd tstackh.dhd 

rna3dat = asint1x2.dat int11.dat miscloop.dat tloop.dat tstackh.dat \
coaxial.dat int21.dat sint2.dat triloop.dat tstacki.dat coaxstack.dat \
int22.dat sint4.dat tstackcoax.dat tstackm.dat dangle.dat loop.dat \
stack.dat tstack.dat 

IMG = back.gif home.gif l_purple.gif mfold-server-credit-sm.gif \
ddG.gif l_blue.gif l_red.gif rna.gif end2.gif l_brown.gif l_yellow.gif \
shield_t.gif end-break.gif l_cyan.gif mail.gif Flower.gif l_green.gif \
mfold5.gif green.gif l_grey.gif mfold-server-credit.gif 

AWK = split_ct.awk

HTML = form1-doc.html formats.html

